--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch:first": "NODE_ENV=development ./node_modules/.bin/webpack --progress --watch --env target=first",
     "watch": "NODE_ENV=development ./node_modules/.bin/webpack --progress --watch",
     "clean": "rm -rf ./dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "fork-ts-checker-webpack-plugin": "^6.2.5",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
     "ts-loader": "^9.1.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
